--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
@@ -211,7 +211,7 @@
 
   <footer id="footer">
     <i class="fas fa-envelope fa-3x"></i><br />
-    <p>© Copyright 2018 TinDog</p>
+    <p>© Copyright 2021 TinDog</p>
 
   </footer>
 
