--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <p>Simple and affordable price plans for your and your dog.</p>
 
     <div class="row">
-      <div class="pricing-column col-lg-4 col-md-6">
+      <div class="pricing-column col-lg-4">
         <div class="card">
           <div class="card-header">
             <h3>Chihuahua</h3>
@@ -152,7 +152,7 @@
           </div>
         </div>
       </div>
-      <div class="pricing-column col-lg-4 col-md-6">
+      <div class="pricing-column col-lg-4">
         <div class="card">
           <div class="card-header">
             <h3>Labrador</h3>
